--- a/apis/eks/generator-config.yaml
+++ b/apis/eks/generator-config.yaml
@@ -3,11 +3,13 @@ ignore:
     - Nodegroup
     - Cluster
     - FargateProfile
+    - EksAnywhereSubscription
   shape_names:
     - Nodegroup
     - Cluster
     - FargateProfile
     - IdentityProviderConfig
+    - EksAnywhereSubscription
   field_paths:
     - DescribeAddonInput.ClusterName
     - CreateAddonInput.ClusterName
